{
  "version": 4,
  "terraform_version": "1.8.4",
  "serial": 30,
  "lineage": "a71ec436-428a-22d3-c210-070ac7c50609",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "network-itw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b70fa74e45c3917",
            "arn": "arn:aws:ec2:us-east-1:637423369474:instance/i-0b52b8c867ea46967",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b52b8c867ea46967",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "master",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00a8a7ec9a08f383c",
            "private_dns": "ip-10-0-2-155.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.155",
            "public_ip": "100.27.211.203",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0dbecff459c0bbc67",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-001874c3e6cf67109",
            "tags": {
              "Name": "network-itw"
            },
            "tags_all": {
              "Name": "network-itw"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-095b9ac272373b56a"
            ]
          },
          "dependencies": [
            "aws_security_group.sg-itw",
            "aws_subnet.public",
            "aws_vpc.interview"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "interview",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423369474:internet-gateway/igw-038d827a76d0ee360",
            "id": "igw-038d827a76d0ee360",
            "owner_id": "637423369474",
            "vpc_id": "vpc-0bc902464ee1cdd01"
          },
          "dependencies": [
            "aws_vpc.interview"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "nwi-itw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423369474:network-interface/eni-0f6451d03045689c0",
            "id": "eni-0f6451d03045689c0",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0a:ff:e0:75:0c:bf",
            "owner_id": "637423369474",
            "private_ip": "10.0.2.8",
            "private_ip_list": [
              "10.0.2.8"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.2.8"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-095b9ac272373b56a"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-001874c3e6cf67109",
            "tags": {
              "Name": "Nwi-itw"
            },
            "tags_all": {
              "Name": "Nwi-itw"
            }
          },
          "dependencies": [
            "aws_security_group.sg-itw",
            "aws_subnet.public",
            "aws_vpc.interview"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "interview",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423369474:route-table/rtb-04c901ffebeb9e55a",
            "id": "rtb-04c901ffebeb9e55a",
            "owner_id": "637423369474",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-038d827a76d0ee360",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route interview"
            },
            "tags_all": {
              "Name": "Route interview"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bc902464ee1cdd01"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.interview",
            "aws_vpc.interview"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "itw-assocation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ec5145ce1e7f801b",
            "route_table_id": "rtb-04c901ffebeb9e55a",
            "subnet_id": "subnet-001874c3e6cf67109"
          },
          "dependencies": [
            "aws_internet_gateway.interview",
            "aws_route_table.interview",
            "aws_subnet.public",
            "aws_vpc.interview"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-itw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423369474:security-group/sg-095b9ac272373b56a",
            "description": "Allow itw inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-095b9ac272373b56a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ITW from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ITW from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ITW from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sg_itw",
            "name_prefix": "",
            "owner_id": "637423369474",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_igw"
            },
            "tags_all": {
              "Name": "sg_igw"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bc902464ee1cdd01"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.interview"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423369474:subnet/subnet-03e204fda844340b2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03e204fda844340b2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423369474",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-itw"
            },
            "tags_all": {
              "Name": "private-itw"
            },
            "vpc_id": "vpc-0bc902464ee1cdd01"
          },
          "dependencies": [
            "aws_vpc.interview"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423369474:subnet/subnet-001874c3e6cf67109",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-001874c3e6cf67109",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423369474",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-itw"
            },
            "tags_all": {
              "Name": "public-itw"
            },
            "vpc_id": "vpc-0bc902464ee1cdd01"
          },
          "dependencies": [
            "aws_vpc.interview"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "interview",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423369474:vpc/vpc-0bc902464ee1cdd01",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bdb835277f5948b8",
            "default_route_table_id": "rtb-025f20d0e0da96c57",
            "default_security_group_id": "sg-0b22cb91a238880d8",
            "dhcp_options_id": "dopt-0e940e1fa3be8036d",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bc902464ee1cdd01",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-025f20d0e0da96c57",
            "owner_id": "637423369474",
            "tags": {
              "Name": "techie-interview"
            },
            "tags_all": {
              "Name": "techie-interview"
            }
          }
        }
      ]
    }
  ]
}